# ocr-cross

./: CMakeLists.txt  README.md
